<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home_member"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/teal_200" />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_touch"
        android:title="@string/absensi"
        app:cnb_iconColor="@color/teal_200" />

    <item
        android:id="@+id/navigation_trans_member"
        android:icon="@drawable/ic_book"
        android:title="@string/list_data"
        app:cnb_iconColor="@color/teal_200" />


    <item
        android:id="@+id/navigation_setting_member"
        android:icon="@drawable/ic_outline_settings"
        android:title="@string/pengaturan"
        app:cnb_iconColor="@color/teal_200" />
</menu>