<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ui.splash.SplashActivity">


    <ProgressBar
        android:layout_below="@+id/tv_text_below"
        android:id="@+id/progress_bar_horizontal_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:progressTint="@color/white"
        android:layout_marginTop="10dp"

        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo_splash"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:civ_border_color="@color/white"
        app:civ_border_width="3dp" />

    <TextView
        style="@style/shadowTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/logo_splash"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/dosis_bold"
        android:shadowColor="@color/black"
        android:text="@string/mis"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:id="@+id/tv_text_below"
        style="@style/shadowTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_splash"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/splash_bottom"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/splash_app_ver"
        style="@style/shadowTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        tools:text="App Ver.2.1" />

    <TextView
        android:visibility="gone"
        android:id="@+id/lokasi_splash"
        style="@style/shadowTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_120sdp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        tools:text="App Ver.2.1" />
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/splashProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" />

</RelativeLayout>