<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:background="@drawable/oval_header">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foto_guest"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@mipmap/ic_logoapp"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_header_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/dosis_bold"
                android:text="@string/management_information_system"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/foto_guest"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32" />

            <TextView
                android:id="@+id/tv_nameMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_header_guest"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_10sdp"
               android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toEndOf="@+id/foto_guest"
                android:ellipsize="end"
                android:fontFamily="@font/dosis_bold"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/foto_guest"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_guest"
                tools:text="Erick Prastya Erick Prastya Erick Prastya " />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_barcode_home"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="108dp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_nameMain"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.769">

                <ImageView
                    android:id="@+id/img_barcode_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_qr_scanner"
                    app:tint="@color/black" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_location_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableTint="@color/main_color"
            tools:text="Jalan Pelita Indah 2 RT 08" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:tabIndicatorColor="@color/main_color"
            app:tabSelectedTextColor="@color/main_color">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_umum" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_sekolah" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>